--- a/src/Components/Sections/Blog/Blog.css
+++ b/src/Components/Sections/Blog/Blog.css
@@ -1,7 +1,8 @@
 /* Blog Section Styles */
 .blog-section {
+  margin-top: 30px;
   padding: 60px 20px;
-  background-color: #f9f9f9;
+  /* background-color: #f9f9f9; */
 }
 
 .blog-title {
@@ -30,8 +31,6 @@
   flex: 1 1 calc(33.333% - 20px);
   overflow: hidden;
   border-radius: 8px;
-  /* background-color: #fff; */
-  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
   transition: transform 0.3s ease-in-out;
   animation: fadeIn 1s ease-in-out;
 }
@@ -61,6 +60,40 @@
   transform: scale(1.1);
 }
 
+/* Shine Effect */
+.blog-image-wrapper::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -150%; /* Start outside the image */
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.5) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  transform: skewX(-30deg);
+  z-index: 1;
+  pointer-events: none;
+  transition: all 0.3s ease-in-out;
+}
+
+.blog-item:hover .blog-image-wrapper::before {
+  animation: shine 1s forwards ease-in-out;
+}
+
+@keyframes shine {
+  0% {
+    left: -150%;
+  }
+  100% {
+    left: 150%;
+  }
+}
+
+/* Blog Card Title */
 .blog-card-title {
   font-size: 1.25rem;
   color: #333;
@@ -100,5 +133,12 @@
   100% {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .blog-item {
+    flex: 1 1 100%;
   }
 }
