--- a/src/Components/Sections/Hero/Hero.css
+++ b/src/Components/Sections/Hero/Hero.css
@@ -1,5 +1,7 @@
 
 .hero-container {
+    gap: 15px;
+    margin-top: 25px;
     width: 100%;
     position: relative;
     overflow: hidden;
@@ -7,6 +9,7 @@
   
 .image-scroll-container {
     display: flex;
+  
     overflow-x: auto;
     width: 100%;
     padding: 0;
@@ -43,7 +46,7 @@
   
 .heroo-text {
     font-size: 18px;
-    color: rgb(88, 86, 86);
+    /* color: rgb(88, 86, 86); */
     margin: 10px 0;  /* Reduce space between text blocks */
 }
   
@@ -53,7 +56,7 @@
 }
   
 .btn {
-    background-color: #007BFF;
+    /* background-color: #007BFF; */
     color: white;
     padding: 10px 20px;
     text-decoration: none;
@@ -68,7 +71,7 @@
 }
   
 .overlay-text .btn:hover {
-    background-color: #0056b3;
+    background-color: rgb(48, 111, 79);
 }
   
 /* For horizontal scrolling container */
@@ -77,12 +80,12 @@
 }
   
 .image-scroll-container::-webkit-scrollbar-thumb {
-    background-color: #ccc;
+    /* background-color: #ccc; */
     border-radius: 5px;
 }
   
 .image-scroll-container::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1; */
 }
   
 /* Responsive adjustments */
