--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -96,7 +96,11 @@ body {
   font-size: 1.5rem;
   position: relative;
 }
-
+.btn-text{
+  margin-right: 20px;
+  font-size: 1rem;
+  margin-bottom: 10px;
+}
 .btn-badge {
   background-color: black;
   color: white;
