--- a/src/Components/Hompages/Scrollbar.css
+++ b/src/Components/Hompages/Scrollbar.css
@@ -4,9 +4,10 @@
     right: 20px;
     background-color: white;
     color: rgb(48, 111, 79);
+    font-weight: bold;
     border: none;
     padding: 10px 15px;
-    font-size: 1.5rem;
+    font-size: 2rem;
     border-radius: 50%;
     cursor: pointer;
     display: none; /* Initially hidden */
