--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -49,7 +49,10 @@ body {
   width: 100%;
   text-align: center;
 }
-
+.btn-text{
+  font-size: 1rem;
+  margin-right: 10px;
+}
 /* Header Top */
 .header-top {
   display: flex;
